--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="col-md-3 mb-3">
         <label id="key"></label>
         <select class="custom-select" id="dropdown">
-            <option value="90016009-Newkor 6MM 3.60 M X 1.05 M">Newkor 6MM 3.60 M X 1.05 M</option>
-            <option value="90050101-Close Fitting Adj Ridges NK-2">Close Fitting Adj Ridges NK-2</option>
-            <option value="90050105-North Light Curves NK-9">North Light Curves NK-9</option>
-            <option value="90050102-Apron Piece NK-3">Apron Piece NK-3</option>
-            <option value="90050401-Boundary Wall Gutter-BW-18">Boundary Wall Gutter-BW-18</option>
-            <option value="90090002-Spl. Newkor Sheet 6MM 1.25 M X 1.05 M">Spl. Newkor Sheet 6MM 1.25 M X 1.05 M</option>
-            <option value="90050310-Union clip (BWU-12)">Union clip (BWU-12)</option>
-            <option value="90051603-Boards/Corn Pieces 1.83m ST -6/6">Boards/Corn Pieces 1.83m ST -6/6</option>
-            <option value="90051403-Curved Sheet- 3.00m X 2.74m Radius">Curved Sheet- 3.00m X 2.74m Radius</option>
-            <option value="990002302-Spl. Newkor Sheet 1.25 M X 1.05 M">Spl. Newkor Sheet 1.25 M X 1.05 M</option>
+            <option value="90016009#Newkor 6MM 3.60 M X 1.05 M">Newkor 6MM 3.60 M X 1.05 M</option>
+            <option value="90050101#Close Fitting Adj Ridges NK-2">Close Fitting Adj Ridges NK-2</option>
+            <option value="90050105#North Light Curves NK-9">North Light Curves NK-9</option>
+            <option value="90050102#Apron Piece NK-3">Apron Piece NK-3</option>
+            <option value="90050401#Boundary Wall Gutter-BW-18">Boundary Wall Gutter-BW-18</option>
+            <option value="90090002#Spl. Newkor Sheet 6MM 1.25 M X 1.05 M">Spl. Newkor Sheet 6MM 1.25 M X 1.05 M</option>
+            <option value="90050310#Union clip (BWU-12)">Union clip (BWU-12)</option>
+            <option value="90051603#Boards/Corn Pieces 1.83m ST -6/6">Boards/Corn Pieces 1.83m ST -6/6</option>
+            <option value="90051403#Curved Sheet- 3.00m X 2.74m Radius">Curved Sheet- 3.00m X 2.74m Radius</option>
+            <option value="990002302#Spl. Newkor Sheet 1.25 M X 1.05 M">Spl. Newkor Sheet 1.25 M X 1.05 M</option>
         </select>
     </div>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
