--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div class="col-md-3 mb-3">
         <label id="key"></label>
         <select class="custom-select" id="dropdown">
+            <option value="90016009#Newkor 6MM 3.60 M X 1.05 M">Choose SKU</option>
             <option value="90016009#Newkor 6MM 3.60 M X 1.05 M">Newkor 6MM 3.60 M X 1.05 M</option>
             <option value="90050101#Close Fitting Adj Ridges NK-2">Close Fitting Adj Ridges NK-2</option>
             <option value="90050105#North Light Curves NK-9">North Light Curves NK-9</option>
